[gd_scene load_steps=9 format=2]

[ext_resource path="res://Image_Imports/Character_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Golem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 30.5 )

[sub_resource type="Animation" id=2]
resource_name = "Arm_Shot"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 83 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Regen"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 61, 63, 62, 64, 66, 67, 68, 69 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1.5 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 26, 0 )
enabled = true
collision_mask = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../floor_checker")
anims/Arm_Shot = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/RESET = SubResource( 5 )
anims/Regen = SubResource( 7 )
anims/Walk = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 200, -47 )
scale = Vector2( 0.155647, 1.06492 )
polygon = PoolVector2Array( -1291.38, 18.7808, -1349.21, 28.1711, -1439.15, 32.8663, -1445.58, 61.0374, -1368.48, 57.2813, -1297.81, 67.6107, -1227.14, 56.3423, -1130.76, 55.4032, -1111.49, 35.6834, -1220.71, 28.1711 )

[node name="Player_Detect" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
